# nocodeBuilder

./: .gitignore  README.md  agent.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: native-sandbox.md
scripts/: prepare-tauri-sidecars.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/runtime/: node-runtime-manifest.json
src-tauri/src/: agent_storage.rs  app_storage.rs  commands.rs  credentials.rs  lib.rs  main.rs  projects.rs  spec_storage.rs
src-tauri/src/commands/: command_runner.rs  command_spec.rs  command_whitelist.rs  dev_server.rs  events.rs  mod.rs  node_runtime.rs  preview.rs  process.rs  supabase.rs  time.rs  types.rs  vercel.rs
src-tauri/src/commands/vercel/: cli.rs  urls.rs
src-tauri/src/projects/: change_commands.rs  conversation_commands.rs  file_commands.rs  metadata.rs  mod.rs  project_commands.rs  types.rs  workspace.rs
src-tauri/src/sandbox/: environment.rs  macos.rs  manager.rs  mod.rs  network.rs  policy.rs  process.rs  types.rs  unsupported.rs  windows.rs  workspace.rs
src-tauri/tests/: sandbox_helper_contract.rs  sandbox_runner_contract.rs  windows_native_smoke.rs
src/adapters/: siteIrAdapter.test.ts  siteIrAdapter.ts
src/agent/: languagePolicy.test.ts  languagePolicy.ts  projectModifier.ts
src/agent-core/: encoding.test.ts  expectedFiles.ts  pathScope.ts  types.ts
src/agent-core/budget/: agentBudget.test.ts  agentBudget.ts
src/agent-core/contract/: taskContract.test.ts  taskContract.ts
src/agent-core/manifest/: taskManifest.ts
src/agent-core/model/: actions.ts
src/agent-core/policy/: policyEngine.test.ts  policyEngine.ts
src/agent-core/runtime/: driftGuard.test.ts  driftGuard.ts  fakeModelIntegration.test.ts  runController.test.ts  runController.ts  runStateMachine.test.ts  runStateMachine.ts
src/agent-core/site-ir/: siteIndex.test.ts  siteIndex.ts
src/agent-core/tools/: toolRegistry.test.ts  toolRegistry.ts
src/agent-core/verifier/: verifier.test.ts  verifier.ts
src/agent-runtime/: agentRunControl.ts  applicationAdapter.test.ts  applicationAdapter.ts  runController.ts
src/agent/llm/: ChatCompletionClient.ts  DeepSeekClient.ts  errors.ts  sse.ts  types.ts
src/agent/project/: backendContext.ts  backendSchema.ts  context.ts  contextCompression.test.ts  contextCompression.ts  memory.ts  packageValidation.ts  pathRules.ts  projectPolicy.ts  prompts.test.ts  prompts.ts  requests.test.ts  requests.ts  toolRegistry.ts  types.ts  validators.test.ts  validators.ts
src/components/chat/: AgentRunPanel.tsx  ChatPanel.tsx
src/components/database/: DatabasePanel.tsx
src/components/iteration/: IterationModeSwitch.tsx  iterationModeSwitchState.test.ts  iterationModeSwitchState.ts
src/components/layout/: AppShell.tsx
src/components/logs/: CodeViewer.tsx  EmptyState.tsx  FileTreeNode.tsx  FilesWorkspace.tsx  LogsPanel.tsx  ReviewPanel.tsx  monacoSetup.ts
src/components/preview/: PreviewFrame.tsx  PreviewHeader.tsx  PreviewPanel.tsx  VercelDeployDialog.tsx  (+1 more)
src/i18n/: index.test.ts  index.tsx  translations.ts
src/services/: agentRuntime.ts  aiProviders.ts  appStorage.ts  keyStore.ts  projectEnv.test.ts  projectEnv.ts  projects.ts  specs.test.ts  specs.ts  supabaseRest.ts
src/spec-core/: blockTriage.test.ts  blockTriage.ts  specStateMachine.test.ts  specStateMachine.ts  taskCompiler.test.ts  taskCompiler.ts  types.ts  validators.test.ts  validators.ts
src/spec-runtime/: executionCancellation.ts  prompts.test.ts  prompts.ts  requests.test.ts  requests.ts  specMessageRouter.test.ts  specMessageRouter.ts
src/store/: agentFileChanges.ts  agentHooks.ts  agentRunStoreActions.test.ts  agentRunStoreActions.ts  agentToolExecutor.test.ts  agentToolExecutor.ts  agentUi.ts  agentWorkflow.ts  appStore.ts  changeHistory.ts  chatMessages.ts  chatStoreActions.test.ts  chatStoreActions.ts  commandLogs.ts  commandStoreActions.ts  conversationState.ts  conversationStoreActions.test.ts  conversationStoreActions.ts  deploymentStoreActions.ts  initialBuildGate.test.ts  initialBuildGate.ts  previewStoreActions.ts  projectStoreActions.test.ts  projectStoreActions.ts  reviewStoreActions.ts  rollbackStoreActions.ts  specStoreActions.test.ts  specStoreActions.ts  storeAccess.ts  workspaceNavigationLock.ts
(+7 files in other folders)
