[package]
name = "ai-web-builder"
version = "0.1.0"
description = "AI Web Builder desktop MVP"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_web_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
futures-util = "0.3"
flate2 = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls", "stream"] }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
