[package]
name = "nocodebuilder"
version = "0.1.0"
description = "nocodeBuilder desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nocodebuilder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = "0.4.45"
futures-util = "0.3.32"
flate2 = "1.1.9"
keyring = { version = "4.1.2", default-features = false, features = ["v1", "windows-native-keyring-store"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls", "stream"] }
tauri = { version = "2.11.3", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "sqlite", "runtime-tokio", "tls-rustls"] }
tar = "0.4.46"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
